infrastructure/gitops-ocp/gitops-namespace-access-platform/platform/namespaces/prod/dbank-app-02/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: dbank-app-02-prod
  labels:
    app.kubernetes.io/name: dbank-app-02
    app.kubernetes.io/managed-by: argocd
    platform.company.io/managed-by: platform-team
    platform.company.io/application: dbank-app-02
    platform.company.io/environment: prod
    platform.company.io/domain: card-management
